fix(layout): remove overflow hidden (#3529)

--- a/layouts/Layout.less
+++ b/layouts/Layout.less
@@ -112,9 +112,6 @@
         height: calc(@full - @toolbar-height - @light-spacing);
         &:extend(.fifth-layer);
       }
-      .chat-scroll-content {
-        overflow: hidden;
-      }
     }
   }
 
